[gd_scene load_steps=6 format=2]

[ext_resource path="res://2D/Placeholders/Enemies/goblin.png" type="Texture" id=1]
[ext_resource path="res://Code/Enemies code/FSM.gd" type="Script" id=2]
[ext_resource path="res://Code/Enemies code/CHASE.gd" type="Script" id=3]
[ext_resource path="res://Code/Enemies code/IDLE.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 6.0

[node name="Goblin" type="KinematicBody2D" groups=["ENEMY"]]

[node name="Goblin" type="Sprite" parent="."]
position = Vector2( 0, -9 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 1 )

[node name="FSM" type="Node2D" parent="."]
script = ExtResource( 2 )
RootPath = NodePath("..")
vel = 50.0

[node name="IDLE" type="Node2D" parent="FSM"]
script = ExtResource( 4 )
FSMPath = NodePath("..")

[node name="CHASE" type="Node2D" parent="FSM"]
script = ExtResource( 3 )
FSMPath = NodePath("..")

[node name="UpdatePath" type="Timer" parent="."]

[node name="StopChase" type="Timer" parent="."]

[connection signal="timeout" from="UpdatePath" to="FSM" method="_on_UpdatePath_timeout"]
[connection signal="timeout" from="StopChase" to="FSM" method="_on_StopChase_timeout"]
